--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#008080</color>
+    <color name="colorPrimaryDark">#004C4C</color>
+    <color name="colorAccent">#FF7F7F</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="tealAccent">#b2d8d8</color>
 </resources>
