--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,8 @@
     <color name="colorAccent">#FF7F7F</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+
     <color name="tealAccent">#b2d8d8</color>
+    <color name="background">#E4E4E4</color>
 </resources>
