view data kematian

--- a/app/src/main/res/layout/activity_data_kematian.xml
+++ b/app/src/main/res/layout/activity_data_kematian.xml
@@ -44,6 +44,11 @@
                     android:textSize="16sp"
                     android:gravity="center"
                     android:visibility="gone"/>
+                <ImageButton
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_add_circle"
+                    android:layout_alignParentBottom="true"/>
             </RelativeLayout>
         </LinearLayout>
 
