view detail kematian

--- a/app/src/main/res/layout/activity_data_kematian_detail.xml
+++ b/app/src/main/res/layout/activity_data_kematian_detail.xml
@@ -1,6 +1,229 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background">
 
-</LinearLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:fillViewport="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TableLayout
+                android:id="@+id/tl_detail_kematian"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/rc_white"
+                android:layout_marginTop="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginLeft="12dp"
+                android:elevation="4dp">
+                <TableRow
+                    android:paddingTop="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="ID"
+                        android:layout_marginLeft="12dp"
+                        android:padding="4dp"
+                        android:fontFamily="@font/sourcesanspro_semibold"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+                    <TextView
+                        android:id="@+id/tv_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="id"
+                        android:layout_marginLeft="12dp"
+                        android:padding="4dp"
+                        android:fontFamily="@font/sourcesanspro_regular"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+                </TableRow>
+
+                <TableRow
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tanggal"
+                        android:layout_marginLeft="12dp"
+                        android:padding="4dp"
+                        android:fontFamily="@font/sourcesanspro_semibold"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+                    <TextView
+                        android:id="@+id/tv_tgl"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="tgl"
+                        android:layout_marginLeft="12dp"
+                        android:padding="4dp"
+                        android:fontFamily="@font/sourcesanspro_regular"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+                </TableRow>
+
+                <TableRow
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Waktu"
+                        android:layout_marginLeft="12dp"
+                        android:padding="4dp"
+                        android:fontFamily="@font/sourcesanspro_semibold"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+                    <TextView
+                        android:id="@+id/tv_waktu"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="waktu"
+                        android:layout_marginLeft="12dp"
+                        android:padding="4dp"
+                        android:fontFamily="@font/sourcesanspro_regular"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+                </TableRow>
+
+                <TableRow
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Penyebab"
+                        android:layout_marginLeft="12dp"
+                        android:padding="4dp"
+                        android:fontFamily="@font/sourcesanspro_semibold"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+                    <TextView
+                        android:id="@+id/tv_penyebab"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="penyebab"
+                        android:layout_marginLeft="12dp"
+                        android:padding="4dp"
+                        android:fontFamily="@font/sourcesanspro_regular"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+                </TableRow>
+
+                <TableRow
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Kondisi"
+                        android:layout_marginLeft="12dp"
+                        android:padding="4dp"
+                        android:fontFamily="@font/sourcesanspro_semibold"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+                    <TextView
+                        android:id="@+id/tv_kondisi"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="kondisi"
+                        android:layout_marginLeft="12dp"
+                        android:padding="4dp"
+                        android:fontFamily="@font/sourcesanspro_regular"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+                </TableRow>
+
+                <TableRow
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Created At"
+                        android:layout_marginLeft="12dp"
+                        android:padding="4dp"
+                        android:fontFamily="@font/sourcesanspro_semibold"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+                    <TextView
+                        android:id="@+id/tv_created_at"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="create"
+                        android:layout_marginLeft="12dp"
+                        android:padding="4dp"
+                        android:fontFamily="@font/sourcesanspro_regular"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+                </TableRow>
+
+                <TableRow
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Updated At"
+                        android:layout_marginLeft="12dp"
+                        android:padding="4dp"
+                        android:fontFamily="@font/sourcesanspro_semibold"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+                    <TextView
+                        android:id="@+id/tv_updated_at"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="update"
+                        android:layout_marginLeft="12dp"
+                        android:padding="4dp"
+                        android:fontFamily="@font/sourcesanspro_regular"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"/>
+                </TableRow>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_gravity="center"
+                    android:text="edit data"
+                    android:fontFamily="@font/sourcesanspro_light"
+                    android:textSize="14sp"
+                    android:gravity="right"
+                    android:textColor="@color/colorPrimaryLight"/>
+            </TableLayout>
+
+            <ImageButton
+                android:id="@+id/ib_delete_data"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_delete"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:background="@color/background"/>
+
+        </RelativeLayout>
+    </ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
