--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -77,8 +77,7 @@
                 android:paddingBottom="12dp"
                 android:text="Kematian"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                android:foreground="?attr/selectableItemBackground"/>
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/tv_data_pemilik"
@@ -98,8 +97,7 @@
                 android:paddingBottom="12dp"
                 android:text="Pemilik"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                android:foreground="?attr/selectableItemBackground"/>
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/tv_data_penyakit"
@@ -119,8 +117,7 @@
                 android:paddingBottom="12dp"
                 android:text="Penyakit"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                android:foreground="?attr/selectableItemBackground"/>
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/tv_data_perkawinan"
@@ -140,8 +137,7 @@
                 android:paddingBottom="12dp"
                 android:text="Perkawinan"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                android:foreground="?attr/selectableItemBackground"/>
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/tv_data_ras"
@@ -161,8 +157,7 @@
                 android:paddingBottom="12dp"
                 android:text="Ras"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                android:foreground="?attr/selectableItemBackground"/>
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/tv_data_riwayat"
@@ -182,8 +177,7 @@
                 android:paddingBottom="12dp"
                 android:text="Riwayat Penyakit"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                android:foreground="?attr/selectableItemBackground"/>
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/tv_data_ternak"
@@ -203,8 +197,7 @@
                 android:paddingBottom="12dp"
                 android:text="Ternak"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                android:foreground="?attr/selectableItemBackground"/>
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/tv_data_peternakan"
@@ -225,8 +218,7 @@
                 android:paddingBottom="12dp"
                 android:text="Peternakan"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                android:foreground="?attr/selectableItemBackground"/>
+                android:textSize="20sp"/>
 
         </LinearLayout>
     </ScrollView>
