--- a/app/src/main/res/layout/activity_data_kematian.xml
+++ b/app/src/main/res/layout/activity_data_kematian.xml
@@ -44,16 +44,23 @@
                     android:textSize="16sp"
                     android:gravity="center"
                     android:visibility="gone"/>
-                <ImageButton
-                    android:id="@+id/ib_add_data"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/ic_add_circle"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
-                    android:background="@color/background"/>
             </RelativeLayout>
         </LinearLayout>
-
     </ScrollView>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <ImageButton
+            android:id="@+id/ib_add_data"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_add_circle"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:background="@color/float_transparent"/>
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
