--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -229,7 +229,8 @@
                     android:padding="10dp"
                     android:background="@drawable/rc_white"
                     android:orientation="vertical"
-                    android:elevation="5dp">
+                    android:elevation="5dp"
+                    android:visibility="gone">
                     <ImageView
                         android:layout_width="50dp"
                         android:layout_height="50dp"
